--- a/_config.yml
+++ b/_config.yml
@@ -37,10 +37,10 @@ disqus_shortname:   taylantatli
   #ad-client:
   #ad-slot:
 #bing-verify:
-#email:
-twitter:            username
-facebook:           username
-github:             username
+email:		vivekmudgal001@iitkgp.ac.in
+#twitter:            username
+facebook:           vivekmudgal10
+github:             vivekmudgal
 #stackoverflow:     123456/username   from a "http://stackoverflow.com/users/123456/username" link
 #linkedin:          username
 #xing:              username
