--- a/_config.yml
+++ b/_config.yml
@@ -4,11 +4,11 @@ bio:                'Electrical Engineering Undergraduate @ IIT Kharagpur.'
 description:        "Moon is a minimal, one column jekyll theme for your blog."
 reading_time:       true
 words_per_minute:   200
-logo:               'assets/img/dp.jpg'
+logo:               'assets/img/dp.png'
 background:         'assets/img/placeholder-big.jpg'
 tiled_bg:           false   # Set this true if you want to tile your background image, otherwise it will be covered
 locale:             en_US
-url:                http://taylantatli.github.io/Moon
+url:                http://vivekmudgal.in
 
 # Jekyll
 permalink:          /:title/
