--- a/_config.yml
+++ b/_config.yml
@@ -49,7 +49,7 @@ instagram:          username
 #tumblr:            username
 #pinterest:         username
 #foursquare:        username
-steam:              username
+#steam:              username
 #dribbble:          username
 #youtube:           username
 #soundcloud:        username
