--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site
 title:              'Vivek Mudgal'
-bio:                'Electrical Engineering Undergraduate @ IIT Kharagpur.'
-description:        "Moon is a minimal, one column jekyll theme for your blog."
+bio:                'Student | Robotics Enthusiast | Kgpian'
+description:        "I am a second year undergarduate at IIT Kharagpur student persuing B.Tech in Electrical Engineering."
 reading_time:       true
 words_per_minute:   200
 logo:               'assets/img/prof.jpg'
