--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
 title:              'Vivek Mudgal'
-bio:                'Student | Robotics Enthusiast | Kgpian'
+bio:                'Undergraduate @ IIT Kharagpur'
 description:        "I am a second year undergarduate at IIT Kharagpur student persuing B.Tech in Electrical Engineering."
 reading_time:       true
 words_per_minute:   200
